Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
-
None
Description
InnoDB fails to identify the tablespace after recovery in rename_table test case.
2021-11-23 18:35:55 0 [ERROR] InnoDB: Tablespace 6 was not found at ./test/t2.ibd.
|
2021-11-23 18:35:55 0 [ERROR] InnoDB: Set innodb_force_recovery=1 to ignore this and to permanently lose all changes to the tablespace.
|
2021-11-23 18:35:55 0 [ERROR] InnoDB: Plugin initialization aborted at srv0start.cc[1447] with error Tablespace not found
|
|
InnoDB removes the space id from deferred tablespace when name is being matched. I think defer tablespace should handle rename table in a better way
Attachments
Issue Links
- blocks
-
MDEV-27022 Buffer pool is being flushed during recovery
-
- Closed
-
-
MDEV-28923 atomic.rename_table occasionally fails
-
- Closed
-
- duplicates
-
MDEV-26954 Failed ALTER causes table corruption after recovery - Tablespace not found
-
- Closed
-
- relates to
-
MDEV-27234 InnoDB dictionary recovery wrongly uses READ UNCOMMITTED isolation level instead of READ COMMITTED
-
- Closed
-